force-app/main/default/objects/Funcionario__c/Funcionario__c.object-meta.xml
<CustomObject>
    <label>Funcionario</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funcionarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>