force-app/main/default/objects/Funcionario__c/fields/Apelido__c.field-meta.xml
<CustomField>
    <fullName>Apelido__c</fullName>
    <label>Apelido</label>
    <type>TextArea</type>
</CustomField>