force-app/main/default/objects/Funcionario__c/fields/Canac__c.field-meta.xml
<CustomField>
    <fullName>Canac__c</fullName>
    <label>Canac</label>
    <length>255</length>
    <type>Text</type>
</CustomField>