force-app/main/default/objects/Funcionario__c/fields/IdExternoOOS__c.field-meta.xml
<CustomField>
    <fullName>IdExternoOOS__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo OOS</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>