force-app/main/default/objects/Funcionario__c/fields/idExternoSigTrip__c.field-meta.xml
<CustomField>
    <fullName>idExternoSigTrip__c</fullName>
    <label>idExternoSigTrip</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>