force-app/main/default/objects/Funcionario__c/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <externalId>true</externalId>
    <label>Matrícula</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>