force-app/main/default/objects/Funcionario__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <description>Peso do funcionário</description>
    <label>Peso</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>